test/asm/keyword-global.err
error: Identifier "call.local2" begins with a keyword; did you mean to put a space between them?
    at keyword-global.asm(3)
Assembly aborted with 1 error!
