test/asm/keyword-global.asm
section "test", rom0
	#call.local1
	call.local2
